--- a/src/component/Payment.css
+++ b/src/component/Payment.css
@@ -1,98 +1,30 @@
-/* Payment.css */
-
-.main-content {
-  width: calc(100% - 220px); /* Ensure full width minus sidebar */
-  margin-left: 220px;
-}
-
-.frame {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: calc(100vh - 56px); /* Adjusted to leave space for the header */
-}
-
-.center {
-  text-align: center;
-}
+/* styles.css */
 
 .container {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 100vh;
-}
-
-.tiles {
-  display: flex;
   justify-content: center;
-  align-items: center;
-  width: 80%;
-}
-
-.tile {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10px;
-  border: 1px solid #ccc;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-.upload-section {
+  height: 100vh; /* Full viewport height */
   text-align: center;
 }
 
-.dropzone {
-  background-color: #f0f0f0;
-  border: 2px dashed #ccc;
-  border-radius: 5px;
-  padding: 20px;
-  width: 300px;
-  margin: 0 auto 20px auto;
+table {
+  margin-top: 20px;
+  border-collapse: collapse;
+  align-items: center;
+  margin-left: 20%;
 }
 
-.upload-icon {
-  width: 80px;
-  height: 80px;
-  margin-bottom: 10px;
+table, th, td {
+  border: 1px solid black;
+  padding: 8px 12px;
+
 }
 
-.upload-input {
-  display: none;
+th {
+  background-color: #f2f2f2;
 }
-
-.btn-primary {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  outline: none;
-  padding: 10px 20px;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-  transition: background-color 0.3s ease;
-}
-
-.btn-primary:hover {
-  background-color: #0056b3;
-}
-
-.sample-image {
-  max-width: 100%;
-  height: auto;
-}
-
-@media (max-width: 768px) {
-  .main-content {
-    margin-left: 0; /* Reset margin for smaller screens */
-    width: 100%;
-  }
-
-  .tiles {
-    flex-direction: column;
-  }
-
+::selection{
+  margin-left:20%
 }
