--- a/src/component/Dashboard/Sidebar.css
+++ b/src/component/Dashboard/Sidebar.css
@@ -6,7 +6,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: #31035c;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -47,6 +47,7 @@
     height: 80px;
     border-radius: 50%;
     margin-bottom: 10px;
+    margin-right: 40px;
 }
 
 .user-profile p {
