--- a/src/component/Payment.css
+++ b/src/component/Payment.css
@@ -1,31 +1,30 @@
-/* styles.css */
+  /* styles.css */
 
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh; /* Full viewport height */
-  text-align: center;
+  
+
+  table {
+    margin-top: 20px;
+    border-collapse: collapse;
+    align-items: center;
+    margin-left: 5%;
+    width: auto;
+  }
+
+  table, th, td {
+    border: 1px solid black;
+    color:white
+   
+
+  }
+
+  th {
+    background-color: #f2f2f2;
+  }
+  ::selection{
+    margin-left:20%
+  }
+span{
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+  font-weight: bold;
 }
-
-table {
-  margin-top: 20px;
-  border-collapse: collapse;
-  align-items: center;
-  margin-left: 20%;
-}
-
-table, th, td {
-  border: 1px solid black;
-  padding: 8px 12px;
-
-}
-
-th {
-  background-color: #f2f2f2;
-}
-::selection{
-  margin-left:20%
-}
-
